--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
     "ts-node": "8.4.1",
     "typescript": "3.6.3"
@@ -25,9 +26,23 @@
     "graphql": "^14.5.6",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
+    "type-graphql": "^0.17.5",
     "typeorm": "0.2.19"
   },
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "lint": "./node_modules/.bin/eslint './**/*.{js, jsx, ts,tsx}'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "yarn lint",
+      "git add"
+    ]
   }
 }
