--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts",
-    "lint": "./node_modules/.bin/eslint './src/**/*.{ts, js}'"
+    "lint": "./node_modules/.bin/eslint './src/**/*.{ts, js}'",
+    "seed": "ts-node ./src/utils/seed-database.ts"
   },
   "husky": {
     "hooks": {
