--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "apollo-server-express": "^2.9.3",
     "bcryptjs": "^2.4.3",
+    "class-validator": "0.10.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "graphql": "^14.5.6",
