--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express-session": "^1.15.14",
     "@types/graphql": "^14.5.0",
     "@types/node": "^12.7.5",
+    "@types/node-emoji": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
@@ -29,6 +30,7 @@
     "express-session": "^1.16.2",
     "graphql": "^14.5.6",
     "mysql": "^2.14.1",
+    "node-emoji": "^1.10.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^0.17.5",
     "typeorm": "0.2.19"
