--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       MYSQL_PASSWORD: tcc_password
     volumes:
       - mysql:/var/lib/mysql
+  redis:
+    image: redis:5.0.5
+    ports:
+      - '6379:6379'
 
 volumes:
   mysql:
