--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "tcc-backend",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.11",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.14",
     "@types/graphql": "^14.5.0",
+    "@types/ioredis": "^4.0.18",
     "@types/node": "^12.7.5",
     "@types/node-emoji": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
@@ -25,10 +28,13 @@
     "apollo-server-express": "^2.9.3",
     "bcryptjs": "^2.4.3",
     "class-validator": "0.10.0",
+    "connect-redis": "^4.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "graphql": "^14.5.6",
+    "ioredis": "^4.14.1",
     "mysql": "^2.14.1",
     "node-emoji": "^1.10.0",
     "reflect-metadata": "^0.1.10",
