--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^8.3.4",
     "@types/node": "^12.7.5",
     "@types/node-emoji": "^1.8.1",
+    "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.3.0",
     "@typescript-eslint/parser": "^2.3.0",
     "eslint": "^6.4.0",
@@ -36,6 +37,7 @@
     "connect-redis": "^4.0.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.16",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -46,7 +48,8 @@
     "node-emoji": "^1.10.0",
     "reflect-metadata": "^0.1.10",
     "type-graphql": "^0.17.5",
-    "typeorm": "0.2.19"
+    "typeorm": "0.2.19",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts",
